--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bgio-effects": "^0.3.2",
     "boardgame.io": "^0.39.12",
     "bootstrap": "^4.5.0",
     "esm": "^3.2.25",
@@ -16,7 +17,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "host": "REACT_APP_AGENT=host react-scripts start",
