--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esm": "^3.2.25",
     "history": "^4.10.1",
     "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
