--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "animejs": "^3.2.1",
     "bgio-effects": "^0.3.2",
     "boardgame.io": "^0.39.12",
     "bootstrap": "^4.5.0",
